--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -4,6 +4,7 @@
 [[new-features.3.0]]
 == What's New in Spring Data MongoDB 3.0
 
+* Upgrade to MongoDB Driver 4.0. See <<upgrading.2-3>> for further details.
 * Support for <<mongo-template.aggregation-update,aggregation pipelines in update operations>>.
 * Removal of `_id` flattening for composite Id's when using `MongoTemplate` aggregations.
 * Apply pagination when using GridFS `find(Query)`.
