--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -4,7 +4,7 @@
 [[new-features.3.3]]
 == What's New in Spring Data MongoDB 3.3
 
-* Extended support for <<mapping-usage.linking, linking>> entities.
+* Extended support for <<mapping-usage.document-references, referencing>> entities.
 
 [[new-features.3.2]]
 == What's New in Spring Data MongoDB 3.2
