--- a/src/main/asciidoc/reference/mongodb.adoc
+++ b/src/main/asciidoc/reference/mongodb.adoc
@@ -1002,7 +1002,7 @@ assertThat(upserted.getFirstName()).isEqualTo("Mary");
 assertThat(upserted.getAge()).isOne();
 ----
 
-[[mongo-template.aggregation-update]]
+= [[mongo-template.aggregation-update]]
 === Aggregation Pipeline Updates
 
 Update methods exposed by `MongoOperations` and `ReactiveMongoOperations` also accept an <<mongo.aggregation, Aggregation Pipeline>> via `AggregationUpdate`.
@@ -2502,8 +2502,8 @@ At the time of this writing, we provide support for the following Aggregation Op
 | Set Aggregation Operators
 | `setEquals`, `setIntersection`, `setUnion`, `setDifference`, `setIsSubset`, `anyElementTrue`, `allElementsTrue`
 
-| Group Aggregation Operators
-| `addToSet`, `first`, `last`, `max`, `min`, `avg`, `push`, `sum`, `(*count)`, `stdDevPop`, `stdDevSamp`
+| Group/Accumulator Aggregation Operators
+| `addToSet`, `covariancePop`, `covarianceSamp`, `first`, `last`, `max`, `min`, `avg`, `push`, `sum`, `(*count)`, `stdDevPop`, `stdDevSamp`
 
 | Arithmetic Aggregation Operators
 | `abs`, `add` (*via `plus`), `ceil`, `divide`, `exp`, `floor`, `ln`, `log`, `log10`, `mod`, `multiply`, `pow`, `round`, `sqrt`, `subtract` (*via `minus`), `trunc`
@@ -2544,7 +2544,7 @@ At the time of this writing, we provide support for the following Aggregation Op
 
 * The operation is mapped or added by Spring Data MongoDB.
 
-Note that the aggregation operations not listed here are currently not supported by Spring Data MongoDB. Comparison aggregation operators are expressed as `Criteria` expressions.
+Note that the aggregation operations not listed here are currently not supported by Spring Data MongoDB.Comparison aggregation operators are expressed as `Criteria` expressions.
 
 [[mongo.aggregation.projection]]
 === Projection Expressions
